# MonarchToGriddyPlug

./: .editorconfig  .gitignore  Cargo.toml  ReadME.md  deno.jsonc  getJSON.ts  mod.ts
data/: ReadME.md
data/csharp/: ReadME.md  conf.json  lang.json
src/: main.rs
src/monarch/: _todo_tokenizer.rs  conf.rs  lang.rs  mod.rs
